# Surfactant

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.md.txt  Contributing.md.txt  LICENSE  README-PLUGIN.md  README.md  SBOM_Visualizer_Specification.md  SECURITY.md  busyboxs.txt  diff.txt  diff61225.txt  diffq.txt  generate_cytrics_sbom.py  index.html  js_library_patterns.toml  native_lib_patterns.toml  pr.txt  pyproject.toml  requirements.txt  setup.py  styles.css
.github/: CODE_OF_CONDUCT.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-plugin.yml  pytest.yml  regressions-comment.yml  regressions.yml  release.yml  test_plugins.yml  tests.yml
VibeFactant-2/: LICENSE  README.md  SBOM_Visualizer_Specification.md  index.html  styles.css
VibeFactant-2/js/: main.js  parser.js  visualizer.js
apidocs/: conf.py  index.rst  modules.rst
docs/: api_reference.rst  api_reference2.rst  basic_usage.md  changelog.md  cli_usage.md  conf.py  config.md  configuration_files.md  contribute.md  contribution_guide.md  database_sources.toml  demo.html  external_databases.md  getstarted.md  getting_started.md  images.toml  index.md  index.rst  interactive_demo.md  internals_overview.md  plugins.md  requirements.txt  settings.md  usage.md
docs/api/: config_manager.md
docs/cytrics_schema/: CHANGELOG.md  schema.json
docs/windows_installer_tutorial/: AutomatedInstallerWorkflowSetup.md  execinstaller.py  fsfilter.patch  setupstepper.py
example-configs/: helics-archive-config.json  helics-installprefix-config.json  multiple-archives-config.json
js/: main.js  parser.js  visualizer.js
plugins/: README.md
plugins/SBOMVis/: README.md  pyproject.toml  surfactantplugin_sbomvis.py  surfactantplugin_sbomvisualization.py  visualization.py
plugins/SBOMVis/SBOMVis/: surfactantplugin_sbomvis.py  visualization.py
plugins/SBOMVis/SBOMVis/customTemplates/: template.html
plugins/SBOMVis/SBOMVis/customTemplates/src/: buttonEventHandlers.js  kvGraph.js  main.css  main.js  mouseEventHandlers.js  popup.js  sidebar.js  utils.js
plugins/SBOMVis/customTemplates/: template.html
plugins/SBOMVis/customTemplates/src/: buttonEventHandlers.js  main.css  main.js  popup.js  sidebar.js  utils.js
plugins/angrimportfinder/: README.md  pyproject.toml  surfactantplugin_angrimportfinder.py
plugins/angrimportfinder/tests/: test_angrimportfinder.py
plugins/binary2strings/: pyproject.toml  surfactantplugin_binary2strings.py
plugins/checksec.py/: README.md  pyproject.toml  surfactantplugin_checksec.py
plugins/cvebin2vex/: README.md  pyproject.toml  surfactantplugin-cvebintool2vex.py  surfactantplugin_cvebintool2vex.py
plugins/dapper/: README.md  pyproject.toml  surfactantplugin_dapper.py
plugins/fuzzyhashes/: README.md  pyproject.toml  surfactantplugin_fuzzyhashes.py
plugins/grype/: README.md  pyproject.toml  requirements-test.txt  surfactantplugin_grype.py  test_grype.py
plugins/grype/tests/: test_grype.py
plugins/reachability/: README.md  pyproject.toml  surfactantplugin_reachability.py
plugins/sourcetrail_db_output/: README.md  pyproject.toml  setup.py  surfactantplugin_sourcetrail_db_output.py
plugins/syft/: pyproject.toml  surfactantplugin_syft.py
pymsi/: README.md  pymsi-test.py  pymsi.py
scripts/: README-merge_sbom.md  merge_additional_metadata.py  merge_config.json  merge_sbom.py  oneshot.py  regressions.py
scripts/js_libraries/: README.md  get_retirejs_db.py  match_javascript.py  retirejs_db.py
scripts/native_libraries/: 7z2301-mac.tar.xz  bftpd-6.2.tar  bgpd.pl-0.08.tar  busybox-1_36_1.tar.bz2  file_decompression.py  get_emba_db.py  match_native_lib.py  new1.tar.bz2  tar_decompression.py
surfactant/: __init__.py  __main__.py  config.py  configmanager.py  context.py  fileinfo.py  filetypeid.py  outputs_helics  pluginsystem.py  regex.py  relationships.py  sbom_utils.py
surfactant/cmd/: cli.py  config.py  config_tui.py  createconfig.py  generate.py  merge.py  plugin.py  stat.py  tui.py  ui.py
surfactant/database_manager/: database_utils.py  external_db_config.py  toml_utils.py  utils.py
surfactant/filetypeid/: id_exe.py  id_extension.py  id_extractcode.py  id_hex.py  id_magic.py  id_path.py
surfactant/infoextractors/: __macho_cpuSubtypes.py  a_out_file.py  coff_file.py  docker_file.py  docker_image.py  docker_tarball_file.py  elf_file.py  extractcode_file.py  file_decompression.py  java_file.py  js_file.py  js_libraries.regex  js_library_patterns.json  mach_o_file.py  native_lib_file.py  native_lib_patterns.cfg  ole_file.py  pe_file.py  rpm_file.py  srec_hex.py  uimage_file.py
surfactant/input_readers/: cyclonedx_reader.py  cytrics_reader.py  spdx_reader.py
surfactant/output/: __init__.py  csv_writer.py  cyclonedx_writer.py  cytrics_writer.py  spdx_writer.py
surfactant/plugin/: __init__.py  hookspecs.py  manager.py
surfactant/plugins/: __init__.py
surfactant/relationships/: __init__.py  dotnet_relationship.py  elf.py  elf_relationship.py  java_relationship.py  pe_relationship.py  rpmfile_relationship.py
surfactant/sbomtypes/: __init__.py  _analysisdata.py  _contextentry.py  _file.py  _hardware.py  _observation.py  (+5 more)
surfactantplugin-angrimportfinder/: README.md  surfactantplugin_angrimportfinder.py
surfactantplugin-angrimportfinder.py/: README.md  pyproject.toml  surfactantplugin_angrimportfinder.py
surfactantplugin-binary2strings/: README.md  pyproject.toml  surfactantplugin-binary2strings.py
surfactantplugin-checksec.py/: pyproject.toml  surfactantplugin_checksec.py
surfactantplugin-r2importfinder.py/: pyproject.toml  surfactantplugin_r2importfinder.py
surfactantplugin-stringextract.py/: README.md  pyproject.toml  surfactantplugin_stringextract.py
surfactantplugin-syft/: README.md  pyproject.toml  surfactantplugin_syft.py
tests/data_src/native_shared_lib_test_no1/: CMakeLists.txt  README.md  hello_world.cpp
tests/data_src/native_shared_lib_test_no1/lib/: testlib.cpp  testlib.hpp
web-files/: ui.html
(+113 files in other folders)
