[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Surfactant"
authors = [
    {name = "Levi Lloyd", email = "lloyd27@llnl.gov"},
    {name = "Ryan Mast", email = "mast9@llnl.gov"},
    {name = "Micaela Gallegos", email = "gallegos31@llnl.gov"},
    {name = "Alexander Armstrong", email = "armstrong48@llnl.gov"},
]
maintainers = [
    {name = "Ryan Mast", email = "mast9@llnl.gov"},
]
description = "Generate an SBOM using information from file metadata"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["sbom", "pe", "elf", "ole", "msi"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "dataclasses_json",
    "pyelftools",
    "pefile",
    "dnfile",
    "olefile",
    "defusedxml",
    "spdx-tools>=0.7.1,==0.7.*",
    "pluggy",
    "click"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["build", "pre-commit"]

[project.scripts]
surfactant = "surfactant.__main__:main"

[project.urls]
homepage = "https://lc.llnl.gov/gitlab/cir-software-assurance/sbom-surfactant"
#documentation = "https://readthedocs.org"
#repository = "https://github.com/me/spam.git"
#changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools]
packages =["surfactant"]

[tool.setuptools_scm]
write_to = "surfactant/_version.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."

[tool.pylint.messages_control]
max-line-length = "100"
good-names-rgxs = "x,y,e,md,sw"
disable = [
  "line-too-long",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "duplicate-code",
  "too-many-branches",
  "too-many-statements",
  "unused-variable",
  "invalid-name",
  "no-member",
  "too-many-nested-blocks",
  "fixme",
  "too-many-locals",
  "too-many-arguments",
  "unused-argument",
  "unspecified-encoding",
  "import-error",
]
