[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Surfactant"
authors = [
    {name = "Ryan Mast", email = "mast9@llnl.gov"},
    {name = "Levi Lloyd", email = "lloyd27@llnl.gov"},
    {name = "Micaela Gallegos", email = "gallegos31@llnl.gov"},
    {name = "Alexander Armstrong", email = "armstrong48@llnl.gov"},
    {name = "Shayna Kapadia", email = "kapadia2@llnl.gov"},
]
maintainers = [
    {name = "Ryan Mast", email = "mast9@llnl.gov"},
]
description = "Modular framework to gather file information, analyze dependencies, and generate an SBOM"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["sbom", "pe", "elf", "ole", "msi"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "dataclasses_json",
    "pyelftools",
    "pefile",
    "dnfile",
    "olefile",
    "defusedxml",
    "spdx-tools==0.8.*",
    "cyclonedx-python-lib==6.4.1",
    "pluggy",
    "click",
    "javatools>=1.6.0",
    "loguru"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["build", "pre-commit"]
docs = ["sphinx", "myst-parser"]

[project.scripts]
surfactant = "surfactant.__main__:main"

[project.urls]
Homepage = "https://github.com/LLNL/Surfactant"
Discussions = "https://github.com/LLNL/Surfactant/discussions"
Documentation = "https://surfactant.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/LLNL/Surfactant/issues"
"Source Code" = "https://github.com/LLNL/Surfactant"

[tool.setuptools.packages.find]
include = ["surfactant", "surfactant.*"]

[tool.setuptools_scm]
version_file = "surfactant/_version.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."

[tool.pylint.messages_control]
max-line-length = "100"
good-names-rgxs = "x,y,e,md,sw"
disable = [
  "line-too-long",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "duplicate-code",
  "too-many-branches",
  "too-many-statements",
  "unused-variable",
  "invalid-name",
  "no-member",
  "too-many-nested-blocks",
  "fixme",
  "too-many-locals",
  "too-many-arguments",
  "unused-argument",
  "unspecified-encoding",
  "import-error",
]
