[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfactantplugin_r2importfinder.py"
authors = [
    {name = "Tyler Williams", email = "tyler.williams@pnnl.gov"},
]
description = "Surfactant Imported Function Extractor"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["surfactant"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "r2pipe",
    "surfactant",
]
dynamic = ["version"]

[project.entry-points."surfactant"]
"surfactantplugin_r2importfinder" = "surfactantplugin_r2importfinder"

[tool.setuptools]
py-modules=["surfactantplugin_r2importfinder"]
