[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfactantplugin-angrimportfinder"
authors = [
    {name = "Tyler Williams", email = "tyler.williams@pnnl.gov"},
]
description = "Surfactant Imported Function Extractor"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["surfactant"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "angr",
    "surfactant",
]
dynamic = ["version"]

[project.entry-points."surfactant"]
"surfactantplugin_angrimportfinder" = "surfactantplugin_angrimportfinder"

[tool.setuptools]
py-modules=["surfactantplugin_angrimportfinder"]
