[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfactantplugin_grype"
authors = [
    {name = "Kendall Harter", email = "harter8@llnl.gov"},
]
description = "Surfactant plugin for running grype on files"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["surfactant"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "loguru",
]
dynamic = ["version"]

[project.entry-points."surfactant"]
"surfactantplugin_grype" = "surfactantplugin_grype"

[tool.setuptools]
py-modules=["surfactantplugin_grype"]
