[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfactantplugin_sourcetrail_db_output"
authors = [
    {name = "Kendall Harter", email = "harter8@llnl.gov"},
]
description = "Surfactant plugin for producing Sourcetrail databases for vizualization"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["surfactant"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numbat",
]
dynamic = ["version"]

[project.entry-points."surfactant"]
"surfactantplugin_sourcetrail_db_output" = "surfactantplugin_sourcetrail_db_output"

[tool.setuptools]
py-modules=["surfactantplugin_sourcetrail_db_output"]
